@@ -305,6 +305,7 @@
 			<xsd:element ref="switch"/>
 			<xsd:element ref="image"/>
 			<xsd:element ref="slider"/>
+			<xsd:element ref="colorpicker"/>
 		</xsd:choice>
 	</xsd:group>
 	
@@ -573,6 +574,23 @@
 		<xsd:complexType>
 			<xsd:sequence>
 				<xsd:element ref="link" minOccurs="0" maxOccurs="2"/>
+			</xsd:sequence>
+			<xsd:attribute name="id" type="idType" use="required"/>
+		</xsd:complexType>
+	</xsd:element>
+	
+	<!-- ###############  color picker  ################ -->
+	
+	<xsd:element name="colorpicker">
+		<xsd:annotation>
+			<xsd:documentation><![CDATA[
+				a color picker widget. 
+				sub element: image. 
+			]]></xsd:documentation>
+		</xsd:annotation>
+		<xsd:complexType>
+		   <xsd:sequence>
+			   <xsd:element ref="image" minOccurs="0" maxOccurs="1"/>
 			</xsd:sequence>
 			<xsd:attribute name="id" type="idType" use="required"/>
 		</xsd:complexType>
